[gd_scene load_steps=2 format=2]

[ext_resource path="res://Components/hurtbox/hurtbox.gd" type="Script" id=1]

[node name="hurtbox" type="Area2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_hurtbox_area_entered"]
[connection signal="tree_entered" from="." to="." method="_on_hurtbox_tree_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
